<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/createTask"
        app:navigationIcon="@drawable/ic_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTi"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintBottom_toTopOf="@id/descriptionTi"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/titleHint"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTi"
        app:layout_constraintTop_toBottomOf="@id/titleTi"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintBottom_toTopOf="@id/dateTi"
        android:layout_marginTop="60dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="118dp">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/descriptionHint"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTi"
        app:layout_constraintTop_toBottomOf="@id/descriptionTi"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toStartOf="@id/timeTi"
        app:layout_constraintBottom_toTopOf="@id/cancelBtn"
        android:layout_marginBottom="180dp"
        android:layout_marginTop="60dp"
        app:startIconDrawable="@drawable/ic_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/dateHint"
            android:layout_width="match_parent"
            android:focusable="false"
            android:inputType="none"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeTi"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/dateTi"
        app:layout_constraintTop_toTopOf="@id/dateTi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/hourHint"
            android:layout_width="match_parent"
            android:focusable="false"
            android:inputType="none"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:text="@string/cancelBtn"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/createTaskBtn"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createTaskBtn"
        android:text="@string/createTask"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>